# FreeRTOS-VSCode-Template

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c
FreeRTOS/: queue.c
